<resources>
    <string name="spectra">Spectra</string>
    <string name="app_name">Spectra FFA</string>
    <string name="menu">Menu</string>
    <string name="logout">Logout</string>
    <string name="pref_file">com.abc.preference_file</string>
    <string name="pref_login_status">com.abc.preference_logic_status</string>
    <string name="login_status">com.spectra.preference_logic_status</string>
    <string name="pref_userEmail">com.abc.preference_userEmail</string>
    <string name="pref_username">com.abc.preference_username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="update_downloaded">App has been updated</string>
    <string name="restart">Close and run FFA App again</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="your_assignments">Your Assignments</string>
    <string name="acknowledge">Acknowledge</string>
    <string name="accountstatus">Account Status</string>
    <string name="barringflag">Barring Flag</string>
    <string name="fup_flag">FUP Flag</string>
    <string name="home">Home</string>
    <string name="wifi_analyzer">Wifi Analyzer</string>
    <string name="speed_test">Speed Test</string>
    <string name="gpon">Gpon</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="makelifebetter">#MakeLifeBetter</string>
    <string name="update_etr">Update ETR</string>
    <string name="speed_on_wifi">Speed on Wifi</string>
    <string name="other_in_ml">Other In ML</string>
    <string name="speed_on_lan">Speed on Lan</string>
    <string name="router_position">Router Position</string>
    <string name="submit_on_resolve">Submit Resolve</string>
    <string name="mrtg_details">MRTG Details</string>
    <string name="please_wait">Please wait......</string>
    <string name="change_Bin">Change Bin</string>
    <string name="product_segment">Product Segment</string>
    <string name="product">Product</string>
    <string name="title">Title</string>
    <string name="Description">description</string>
    <string name="sr_number">SR Number:</string>
    <string name="can_id">CAN ID:</string>
    <string name="customer_name">Customer Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="mob_no">Mobile No*</string>
    <string name="slot_date_time">Slot Date Time:</string>
    <string name="address">Address:</string>
    <string name="adds">Address*</string>
    <string name="segment">Segment:</string>
    <string name="type">Type:</string>
    <string name="sub_type">Sub Type:</string>
    <string name="pod_name">POD Name:</string>
    <string name="device_port">Device/Port:</string>
    <string name="current_status">Current Status:</string>
    <string name="case_remarks">Case Remarks:</string>
    <string name="sla_time">SLA Time:</string>
    <string name="sla_status">SLA Status:</string>
    <string name="customer_ip">Customer IP:</string>
    <string name="foni">FONI:</string>
    <string name="repeat">Repeat:</string>
    <string name="massoutage">Massoutage:</string>
    <string name="etr">ETR:</string>
    <string name="start">Start</string>
    <string name="start_time">Start Time:</string>
    <string name="start_location">Start Location:</string>
    <string name="end">End</string>
    <string name="end_time">End Time:</string>
    <string name="end_location">End Location:</string>
    <string name="change_bin">Change Bin:</string>
    <string name="sr_details">SR Details</string>
    <string name="change_status">Change Status:</string>
    <string name="next">NEXT</string>
    <string name="get_unify_session">Get Unify Session</string>
    <string name="rc_1">RC 1:</string>
    <string name="rc_2">RC 2:</string>
    <string name="rc_3">RC 3:</string>
    <string name="rfo">RFO:</string>
    <string name="hold_reason">Hold Reason:</string>
    <string name="contact_name">Contact Name:</string>
    <string name="cntct_name">Contact Name*</string>
    <string name="contact_number">Contact Number:</string>
    <string name="customer_contacted">Customer Contacted:</string>
    <string name="submit_on_hold">Submit on Hold</string>
    <string name="valid_formats">Files with .pdf , .docx , .doc , .jpeg , .jpg, .png are accepted</string>
    <string name="upload_files_message">Only 1 file are allowed.</string>
    <string name="upload_artifacts">Upload Artifacts</string>
    <string name="item_consumption">Add Item</string>
    <string name="consumption_type">Consumption Type</string>
    <string name="add">ADD</string>
    <string name="item">Item</string>
    <string name="sub_item">Sub Item</string>
    <string name="item_type">Item Type</string>
    <string name="quantity">Quantity</string>
    <string name="serial_no_lot_no">Serial No./Lot No.</string>
    <string name="mac_id">MAC ID</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="noc">NOC</string>
    <string name="mrtg">MRTG</string>
    <string name="unhold">UNHOLD</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="nrgp_serialnumber">NRGP SerialNumber</string>
    <string name="nrgp">NRGP</string>
    <string name="nrgpitem">NRGP Item</string>
    <string name="status">Status</string>
    <string name="nrgp_subitem">NRGP SubItem</string>
    <string name="edit_material">Edit Material</string>
    <string name="at_present_there_is_no_pending_sr">At present there is no pending SR</string>
    <string name="enter_customer_account_id">Enter Customer Account ID</string>
    <string name="enter_customer_account_id_can_id">Enter Customer Account ID(CAN ID)</string>
    <string name="get_profile_info">Get Profile info</string>
    <string name="customer_account_id">Can ID:</string>
    <string name="city">City:</string>
    <string name="citybl">City*</string>
    <string name="area_name">Area Name</string>
    <string name="building_society">Building/Society</string>
    <string name="provisioing">Provisioning</string>
    <string name="wcr_completed">WCR Completed</string>
    <string name="ir">IR</string>
    <string name="back_to_account_search">Back to Account Search</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="ont_serail_number">ONT Serial Number</string>
    <string name="re_enter_ont_serail_number">Re enter ONT Serial Number</string>
    <string name="model">Model</string>
    <string name="profile_name">Profile Name</string>
    <string name="tower_structure">Tower/Structure</string>
    <string name="serving_db">Serving Db</string>
    <string name="resend_installation_code">Resend Installation Code</string>
    <string name="resend_service_activation_code">Resend Service Activation Code</string>
    <string name="customer_details">Customer Details</string>
    <string name="installation_date">Installation date:</string>
    <string name="item_consumption_details">Item Consumption Details</string>
    <string name="item_code">Item Code</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="customer_network">Customer Network</string>
    <string name="customer_business_segment">Customer Business Segment:</string>
    <string name="wcr_status">WCR Status:</string>
    <string name="consumption_status">Consumption Status:</string>
    <string name="wi_fi_ssd">WI-FI SSD</string>
    <string name="tx_power">Tx Power</string>
    <string name="save">Save</string>
    <string name="installation_quality_parameters">Installation Quality Parameters</string>
    <string name="cable_crimped_to_the_wall_properly">Cable_crimped to the wall properly</string>
    <string name="speed_test_results_shown_to_coustomer">Speed test results shown to Customer</string>
    <string name="face_plate_mount_to_the_wall_properly">Face plate mount to the wall properly</string>
    <string name="ont_login_details_shared_with_customer">ONT login details shared with Customer</string>
    <string name="wi_fi_ssid_and_password_changed_info">Wi-Fi SSID and Password Changed info.</string>
    <string name="engineer_details">Engineer Details</string>
    <string name="engineer_name">Engineer Name</string>
    <string name="on_hold">On Hold</string>
    <string name="hold_category">Hold Category</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="cpe_mac">CPE MAC</string>
    <string name="cpe_mac_shared">CPE MAC shared</string>
    <string name="general_details">General Details</string>
    <string name="ip_address_subnet_pool">IP Address/Subnet Pool :</string>
    <string name="device_port_no">Device Port No. :</string>
    <string name="first_usable_ip">First Usable IP :</string>
    <string name="last_usable_ip">Last Usable IP :</string>
    <string name="subnet_mask">Subnet Mask :</string>
    <string name="gateway">Gateway :</string>
    <string name="primary_dns">Primary DNS :</string>
    <string name="secondary_dns">Secondary DNS :</string>
    <string name="device_id">Device ID :</string>
    <string name="cpe_ip">CPE IP :</string>
    <string name="ir_attached">IR Attached :</string>
    <string name="otp">OTP :</string>
    <string name="location_with_landmark">Location with Landmark</string>
    <string name="fiber_no_tube_wise">Fiber No. Tube Wise</string>
    <string name="manhole_type">Manhole Type</string>
    <string name="distance">Distance</string>
    <string name="fiber_tube">Fiber Tube</string>
    <string name="wi_fi_ssid">WI-FI SSID</string>
    <string name="rx_power">Rx Power</string>
    <string name="associated_entities_details">Associated Entities Details</string>
    <string name="fms_details">FMS Details</string>
    <string name="manhole_details">Manhole Details</string>
    <string name="fibre_cable">Fibre Cable</string>
    <string name="add_item_consumption">Add Item Consumption</string>
    <string name="customer_end_fms_first_level">Customer End FMS (First Level)</string>
    <string name="customer_end_fms_second_level">Customer End FMS (Second Level)</string>
    <string name="pod_end_fms_no">POD End FMS No.</string>
    <string name="port_number_cx_end">Port Number (Cx End)</string>
    <string name="port_number_pod_end">Port Number (POD End)</string>
    <string name="fiber_no_running_no_wise">Fiber No Running No. Wise</string>
    <string name="installation_code">Installation Code</string>
    <string name="created_on">Created On</string>
    <string name="wcr">WCR</string>
    <string name="create">Create</string>
    <string name="pod">POD :</string>
    <string name="education_customer_regarding_selfcare_portal">Education customer Regarding SelfCare Portal</string>
    <string name="update">UPDATE</string>
    <string name="add_equipment">Add Equipment</string>
    <string name="business">Business</string>
    <string name="add_manhole">Add Manhole</string>
    <string name="loading">Loading....</string>
    <string name="release">Release</string>
    <string name="idb_length">IDB Length</string>
    <string name="link_budget">Link Budget</string>
    <string name="dashboard">DASHBOARD</string>
    <string name="version">Version</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="installation_parameters">Installation Parameters</string>
    <string name="speed_wi_fi">Speed Wi-Fi</string>
    <string name="speed_lan">Speed- LAN</string>
    <string name="installation">Installation</string>
    <string name="fault_repair">Fault Repair</string>
    <string name="dns">DNS</string>
    <string name="approval_to_nav">Approval to NAV</string>
    <string name="click_the_image">Click the Image</string>
    <string name="complete_wcr">Complete WCR</string>
</resources>