<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/_10ssp"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/resolveLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:focusable="true"
        android:orientation="vertical"
        android:textColor="@color/colorBlack"
       >

        <Button
            android:id="@+id/btnUnifySession"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorBlack"
            android:text="@string/get_unify_session"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sessionStatus"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@id/btnUnifySession"
            android:textStyle="bold" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnUnifySession"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/rc_1"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/rc1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnUnifySession"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc1"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/rc_2"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/rc2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc1"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc2"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/rc_3"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/rc3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc2"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc3"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/customer_contacted"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/resolveContacted"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/rc3"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/resolveContacted"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/rfo"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/rfo"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/resolveContacted"
            android:layout_marginLeft="140dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/question_recyler_view"
            android:layout_width="match_parent"
            android:layout_below="@id/rfo"
            android:nestedScrollingEnabled="false"
            android:layout_height="wrap_content"/>

      <!--  <include
            android:id="@+id/question_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question_recyler_view"
            layout="@layout/question_list"/>-->

        <TextView
            android:id="@+id/title"
            android:layout_below="@+id/question_recyler_view"
            android:layout_width="match_parent"
            android:text="Upload Artifacts"
            android:layout_marginTop="@dimen/_20ssp"
            android:singleLine="true"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/speed_on_wifi"
            android:layout_below="@+id/title"
            android:layout_width="match_parent"
            android:hint="@string/speed_on_wifi"
            android:layout_marginTop="@dimen/_20ssp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@android:color/black"
            android:layout_below="@+id/speed_on_wifi"

            />

        <TextView
            android:id="@+id/other_in_ml"
            android:layout_below="@+id/view1"
            android:layout_width="match_parent"
            android:hint="@string/other_in_ml"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_20ssp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@android:color/black"
            android:layout_below="@+id/other_in_ml"

            />


        <TextView
            android:id="@+id/speed_on_lan"
            android:layout_below="@+id/view2"
            android:layout_width="match_parent"
            android:hint="@string/speed_on_lan"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_20ssp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@android:color/black"
            android:layout_below="@+id/speed_on_lan"
            />

        <TextView
            android:id="@+id/router_position"
            android:layout_below="@+id/view3"
            android:layout_width="match_parent"
            android:hint="@string/router_position"
            android:singleLine="true"
            android:layout_marginTop="@dimen/_20ssp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content"/>
        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1ssp"
            android:background="@android:color/black"
            android:layout_below="@+id/router_position"

            />

        <Button
            android:id="@+id/btnUploadArtifacts"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30ssp"
            android:layout_below="@id/view4"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_black"
            android:text="@string/upload_artifacts"
            android:textAllCaps="true"
            android:paddingStart="@dimen/_10ssp"
            android:paddingLeft="@dimen/_10ssp"
            android:paddingEnd="@dimen/_20ssp"
            android:paddingRight="@dimen/_10ssp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginLeft="@dimen/_10ssp"
            android:layout_marginRight="@dimen/_40ssp"
            android:layout_marginEnd="@dimen/_40ssp"
            android:textColor="@color/colorWhite"
            />

        <Button
            android:id="@+id/btnResolveSubmit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30ssp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="180dp"
            android:layout_marginStart="180dp"
            android:background="@drawable/button_purple"
            android:text="@string/submit_on_resolve"
            android:paddingStart="@dimen/_10ssp"
            android:paddingLeft="@dimen/_10ssp"
            android:paddingEnd="@dimen/_10ssp"
            android:paddingRight="@dimen/_10ssp"
            android:layout_below="@id/view4"
            android:textColor="@color/colorWhite"
             />




       <!-- <Button
            android:id="@+id/btnResolveSubmit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/router_position"
            android:layout_marginTop="@dimen/_20ssp"
            android:background="@drawable/button_purple"
            android:text="@string/submit_on_resolve"
            android:layout_marginStart="@dimen/_50ssp"
            android:layout_marginRight="@dimen/_50ssp"
            android:layout_marginLeft="@dimen/_50ssp"
            android:layout_marginEnd="@dimen/_50ssp"
            android:textAllCaps="false"
            android:gravity="center"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />-->

    </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>
